--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.nfonics.taskone"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -42,6 +42,7 @@ dependencies {
     implementation "io.reactivex:rxjava:${rxjavaVersion}"
     implementation "io.reactivex:rxandroid:1.2.1"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    compile 'com.android.support:cardview-v7:23.3.+'
 
     testImplementation 'junit:junit:4.12'
 
